--- a/.github/workflows/build-istoreos.yml
+++ b/.github/workflows/build-istoreos.yml
@@ -41,7 +41,7 @@ jobs:
           - ubuntu-22.04
         include:
           - REPO_BRANCH: istoreos-23.05
-            ARCHITECTURE: x86-alpha
+            ARCHITECTURE: x86
             os: ubuntu-22.04
 
       fail-fast: false
